test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args/src/payable_attr.sw
library;

abi Abi {
    #[payable]
    fn ok_1();

    #[payable(invalid)] // Should be no invalid arg error or warning here.
    fn also_ok();
}